feat:fix hendlers
